Fixing issue with extra spacing obetween active link border and navbar height

--- a/theme/swanlotus/static/sass/swanlotus.sass
+++ b/theme/swanlotus/static/sass/swanlotus.sass
@@ -63,11 +63,11 @@ $sidebar-content-order: 1
 /* Set Background for body tag */
 html
     background-color: $body-background-color
-    scroll-padding-top: 5em // Setting fixed navbar height so that anchors are not covered by navbar
+    scroll-padding-top: 4.5em // Setting to fixed navbar height so that anchors are not covered by navbar
 
 
 body
-    margin: 5em auto 0 // Replace with fixed navbar height so that anchors are not covered by navbar
+    margin: 4.5em auto 0 // Setting to fixed navbar height so that anchors are not covered by navbar
 
 /* Styles for navigation bar */
 .container > .navbar
